1) Now you can save cities to the list of cities, you can delete items from the list. 2) The application data is cached. 3) The city can be opened on Yandex or Google maps on the screen of a separate city. ------------------------------------------------------- 1) Появилась возможность сохранять города в список городов, элементы из списка можно удалять. 2) Данные приложения кэшируются. 3) Город можно открыть на Яндекс или гугл картах на экране отдельного города.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,8 @@
     <string name="place_not_found">Место не найдено</string>
     <string name="other_days_not_found">Прогноз на неделю не найден</string>
     <string name="no_internet_connection">Проверьте подключение к сети</string>
-    <string name="city_not_found">Город не найден</string>
+    <string name="no_map">Карты не доступны без интернета</string>
+    <string name="city_was_added">Город добавлен</string>
     <string name="cloudy">R.drawable.cloudy.png</string>
     <string name="moon">R.drawable.moon.png</string>
     <string name="rain">R.drawable.rain.png</string>
@@ -27,4 +28,5 @@
         <item>Брюсель</item>
         <item>Минск</item>
     </string-array>
+    <string name="title_activity_google_map">Map</string>
 </resources>
